Now able to write data to file. This is however not tracked currently in the correlating INODE.
In addition, errors and offset or blocks with > BLOCK_SIZE values are not implemented.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SOURCES
     src/fs/perm.cpp
     src/mongo/manager.cpp
     src/mongo/md_entry.cpp
+    src/mongo/fs_entry.cpp
 )
 
 # Create executable
