Started working on collection for handling directories.
Also created help class with function that parses paths. This will help us in many aspects such as ensuring a user has sufficient permissions on leading dirs to file.

--- a/mongo_fs/CMakeLists.txt
+++ b/mongo_fs/CMakeLists.txt
@@ -26,10 +26,12 @@ set(SOURCES
     src/entry.cpp
     src/fs/handler.cpp
     src/fs/perm.cpp
+    src/fs/helper.cpp
     src/mongo/manager.cpp
     src/mongo/collection/fs_metadata_collection.cpp
     src/mongo/collection/fs_data_collection.cpp
     src/mongo/collection/fs_lookup_collection.cpp
+    src/mongo/collection/fs_dir_collection.cpp
 )
 
 # Create executable
