fixed the make build system

--- a/mongo_fs/CMakeLists.txt
+++ b/mongo_fs/CMakeLists.txt
@@ -35,9 +35,7 @@ set(SOURCES
 )
 
 # Create executable
-add_executable(${PROJECT_NAME} ${SOURCES}
-    src/fs/fs_config.h
-    src/.cmake-format)
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 # Include FUSE headers
 target_include_directories(${PROJECT_NAME} PRIVATE "${EXTERNAL_HEADERS}")
